--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root{
-    background-color: peru;
+    background-color: white;
 
 }
 @media(max-width:414px){
@@ -11,56 +11,197 @@
     }
 
     .container{
-        margin: 0px 30px;
+        margin: 0px auto;
     }
 
     /* Navbar Content */
+    .container header {
+        margin: 0px auto;
+        background-image: url('../img/hero-bg.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 29rem;
+    }
+    .container header nav{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    nav h2{
+        font-size: 35px;
+        margin: 40px 20px;
+    }
+    nav span{
+        margin: 0px 1.5rem;
+        padding: 6px;
+        border-radius: 6px;
+        color: white;
+        background-color: gray;
+        transition: 5s;
 
-    .container nav{
-        display: grid;
-        grid-template-columns: 36% 84%;
-    }
-    .containernav h2{
-        font-size: 2rem;
-    }
-    nav div{
-        margin: 15px 50px;
-        font-size: 20px;
         
     }
-    nav div button{
+    nav span.menu_left{
+        position: absolute;
+        top: 5;
+        left: 0;
+        transition: 5s;
         
-        border-radius: 8px;
-        padding: 4px 10px;
     }
-    nav div button:nth-child(1){
-        border: 3px solid cornflowerblue;
+    /* nav .close{
+        display: none;
     }
-    nav div button:nth-child(2){
-        background-color: cornflowerblue;
-        border: none;
-    }
-    nav div button:nth-child(2){
-        background-color: cornflowerblue;
-        border: none;
-    }
+    nav .menu_left.close{
+        display: block;
+    } */
+    nav .drop_down{
+        height: 272px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: #00000082;
+        color: white;
+        display: none;
+        transition: 5s;
 
+    }
+    nav .drop_down.drop_down_vis{
+        width: 290px;
+        display: block;
+        transition: 5s;
+
+        
+    }
+    .drop_down ul{
+        list-style: none;
+    }
+    .drop_down ul li{
+        margin: 15px 0px;
+    }
+    header h2{
+        text-align: center;
+    }
+    header h4{
+        text-align: center;
+        margin: 30px 2rem;
+    }
+    header form{
+        text-align: center;
+    }
+    form input{
+        border: none;
+        margin: 7px 0px;
+        border-radius: 50px;
+        padding: 9px 15px;
+        outline: none;
+    }
+    form button{
+        border: none;
+        margin: 7px 0px;
+        border-radius: 50px;
+        padding: 9px 29px;
+        background-color:orangered;
+    }
     /* Content Blog */
     
-    .container .content{
+    .content{
         
     }
     .content h2{
-        margin: 0px 5rem;
+        
     }
 
-    .content h3{
-        text-align: center;
+    .content h4{
+        
+    }
+    .content .done{
+        display: flex;
+        
+    }
+    .done span{
+        margin-left: 16px;
+        color: orangered;
+    }
+    .done p{
+        margin: 3px 13px;
     }
     .content img{
-        width: 365px;
+        width: 100%;
         height: 16rem;
     }
+
+    .section{
+        margin: 0px 1rem;
+        text-align: center;
+        background-color: #ffe7de;
+    }
+    .section img{
+        width: 100%;
+    }
+    .section span{
+        font-size: 3rem;
+        background-color: orangered;
+        border-radius: 50%;
+        margin-top: -27px;
+        border: 4px solid white;
+    }
+    .section h3{
+        color: #f26734;
+    }
+    .section h4{
+        color: #414040;
+        line-height: 1.5;
+        text-align: unset;
+    }
+    .faq{
+
+    }
+    .faq .question{
+        
+    }
+    .faq .answer{
+        display: none;
+    }
+    .faq.ans_block{
+        display: block;
+        
+    }
+
+    .contact{
+        background-color: #ffe7de;
+
+    }
+    .contact h2{
+        text-align: center;
+        padding: 2rem 0px;
+        font-size: 2rem;
+    }
+
+    .contact .index{
+        display: grid;
+        grid-template-columns: 10% 47%;
+    }
+    .index span{
+        font-size: 2.5rem;
+    }
+    .index p:nth-child(0){
+        
+    }
+
+    .index p:nth-child(1){
+        
+    }
+
+
+
+
+
+
+
+
+
+
+    
 
 }
 
