--- a/css/style.css
+++ b/css/style.css
@@ -178,19 +178,38 @@
     }
 
     .contact .index{
-        display: grid;
-        grid-template-columns: 10% 47%;
+        display: flex;
     }
     .index span{
         font-size: 2.5rem;
+        color: orangered;
     }
-    .index p:nth-child(0){
-        
+    .info{
+        margin: -12px 10px;
+    }
+    .data{
+        margin: 2rem 2rem;
+    }
+    .data input{
+        width: 18rem;
+        height: 2.5rem;
+        margin: 6px 0px;
+        border: 1px solid grey;
+        padding: 2px 15px;
+    }
+    .data textarea{
+    
+
+    }
+    .data button{
+        background-color: orangered;
+        padding: 14px 111px;
+        border: 1px solid gray;
+        color: white;
+
     }
 
-    .index p:nth-child(1){
-        
-    }
+
 
 
 
